// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kanji Button tests button when user hasn't chosen yet 1`] = `
<body>
  <div>
    <ion-button
      class="kanji-choice desktop"
      color="primary"
      fill="solid"
    >
      信
    </ion-button>
  </div>
</body>
`;

exports[`Kanji Button tests user pressed another button 1`] = `
<body>
  <div>
    <ion-button
      class="kanji-choice desktop"
      color="danger"
      fill="solid"
    >
      信
    </ion-button>
  </div>
</body>
`;

exports[`Kanji Button tests user pressed another button, but this one was correct 1`] = `
<body>
  <div>
    <ion-button
      class="kanji-choice desktop"
      color="success"
      fill="solid"
    >
      b
    </ion-button>
  </div>
</body>
`;
